kubernetes/ce-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: learners-api
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 8080
  type: LoadBalancer
